# librunecoral

./: .bazelrc  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Makefile  README.md  WORKSPACE  build.rs
.github/workflows/: build_artifacts.yml
docker/: Dockerfile  Dockerfile.Linux  android-ndk.sh  android-system.sh  cross.aarch64-linux-android.Dockerfile  cross.aarch64-unknown-linux-gnu.Dockerfile  cross.armv7-unknown-linux-gnu.Dockerfile  cross.x86_64-linux-android.Dockerfile  cross.x86_64-unknown-linux-gnu.Dockerfile  linux-image.sh  qemu.sh
example/: CMakeLists.txt  main.cpp
example/cmake/: EmbedResources.cmake
example/cmake/toolchains/: linux_aarch64.cmake  linux_armv7l.cmake
runecoral/: BUILD  cc_static_library.bzl  runecoral.cpp  runecoral.h
runecoral/private/: accelerationbackends.h  utils.h
rust/: Cargo.toml  build.rs  context.rs  ffi.rs  lib.rs  runecoral.h  tensors.rs
rust/src/: context.rs  lib.rs  rune_coral.rs  tensors.rs
rust/tests/: smoke-test.rs
tests/: smoke-test.rs
