[package]
name = "hotg-runecoral"
version = "0.3.5-alpha.0"
edition = "2018"
description = "Bindings to the librunecoral library for doing hardware-accelerated inference."
authors = ["The Rune Developers <developers@hotg.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/librunecoral"
categories = ["science", "wasm"]
keywords = ["rune", "coral", "tensorflow"]
exclude = ["bazel-bin", "bazel-librunecoral", "bazel-out", "bazel-testlogs"]

[lib]
path = "rust/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
thiserror = "1.0.29"
itertools = "0.10.1"

[features]
edgetpu_acceleration = []
gpu_acceleration = []

[build-dependencies]
bindgen = "0.59.1"

[dev-dependencies]
static_assertions = "1.1.0"
