[package]
name = "runecoral"
version = "0.1.0"
edition = "2018"
description = "Bindings to the librunecoral library for doing hardware-accelerated inference."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
thiserror = "1.0.26"

[build-dependencies]
bindgen = "0.58.1"

[dev-dependencies]
once_cell = "1.8.0"
