[package]
name = "hotg-runecoral"
version = "0.1.1"
edition = "2018"
description = "Bindings to the librunecoral library for doing hardware-accelerated inference."
authors = ["The Rune Developers <developers@hotg.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/librunecoral"
categories = ["science", "wasm"]
keywords = ["rune", "coral", "tensorflow"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
thiserror = "1.0.26"

[build-dependencies]
bindgen = "0.59.1"

[dev-dependencies]
once_cell = "1.8.0"
static_assertions = "1.1.0"
